Add export control information
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -40,6 +40,8 @@
                     <small class="text-white">
                         {{ with .Site.GetPage "legal/corporate-information"}}<a href="{{ .RelPermalink }}">{{ .Title }}</a>{{end}}
                         |
+                        {{ with .Site.GetPage "legal/export-control"}}<a href="{{ .RelPermalink }}">{{ .Title }}</a>{{end}}
+                        |
                         {{ with .Site.GetPage "legal/privacy-policy"}}<a href="{{ .RelPermalink }}">{{ .Title }}</a>{{end}}
                     </small>
                 </div>
