Add branding guidelines
Signed-off-by: shu3si <sven.trieflinger@de.bosch.com>

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -5,6 +5,10 @@
  * SPDX-License-Identifier: Apache-2.0
  */
 
+footer {
+  min-height: auto;
+}
+
 // Overwrite box not have the huge horizontal paddings
 .td-box {
 
