--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,6 @@
   ~
   ~ SPDX-License-Identifier: Apache-2.0
   --->
-
 {{ $links := .Site.Params.links }}
 <footer class="bg-dark py-5 row d-print-none">
     <div class="container-fluid mx-sm-5">
@@ -27,9 +26,15 @@
                 {{ with .Site.Params.copyright }}
                 <small class="text-white">
                     &copy; {{ now.Year}} {{ .}} The Carbyne Stack
-                    <a href="https://github.com/carbynestack/carbynestack/blob/master/NOTICE.md">Contributors</a>.
+                    <a href="https://github.com/carbynestack/carbynestack/blob/master/NOTICE.md">Contributors</a>.&nbsp;
                     {{ T "footer_all_rights_reserved" }}.
-                </small>{{ end }}
+                </small>
+                {{ end }}
+                <div>
+                    <small class="text-white">
+                        Carbyne Stack is a registered trademark of Robert Bosch GmbH.
+                    </small>
+                </div>
                 <div>
                     <small class="text-white">
                         Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a>,
