Fix additonal codacy finding
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -21,7 +21,7 @@
   padding: 0;
 }
 
-.md-main__inner .md-content__inner:before {
+.md-main__inner .md-content__inner::before {
   display: none;
 }
 
