--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -16,3 +16,23 @@
 .md-nav__item--nested > .md-nav__link:hover {
   color: var(--md-accent-fg-color);
 }
+
+.gsoc-topic-section-title {
+  font-size: 1.4em;
+  padding-bottom: -1.2em;
+}
+
+.gsoc-topic-section-h1 {
+  font-size: 1.2em;
+}
+
+.gsoc-topic-section-h2 {
+  font-size: 1.1em;
+  font-style: italic;
+}
+
+.gsoc-legend {
+  font-size: 0.8em;
+  font-weight: bolder;
+  padding-right: 30px;
+}
