Add logo banner and ecosystem community page
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -36,3 +36,12 @@
   font-weight: bolder;
   padding-right: 30px;
 }
+
+.ecosystem-logo {
+  width: auto;
+  height: 50px;
+}
+
+.invert {
+  filter: invert(1);
+}
