--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -143,3 +143,13 @@ body {
     float: none;
   }
 }
+
+.used-by-logo-banner {
+  display: block;
+}
+
+.used-by-logo {
+  width: auto;
+  height: 40px;
+  margin: 20px;
+}
