Links to discord server and community meetings
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -144,6 +144,12 @@ body {
   }
 }
 
+.svg-icon-in-button {
+  margin-right: 10px;
+  font-size: x-large;
+  vertical-align: top;
+}
+
 .used-by-logo-banner {
   display: block;
 }
