Add page enumerating CS related events
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -42,6 +42,15 @@
   height: 50px;
 }
 
+.event-title {
+  font-size: x-large;
+}
+
+.event-logo {
+  width: auto;
+  height: 70px;
+}
+
 .invert {
   filter: invert(1);
 }
