--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -42,6 +42,16 @@
   height: 50px;
 }
 
+.event-title {
+  font-size: x-large;
+  font-weight: bold;
+}
+
+.event-logo {
+  width: auto;
+  height: 70px;
+}
+
 .invert {
   filter: invert(1);
 }
