Add acknowledgement page with BMBF mention
Signed-off-by: Sven Trieflinger <sven.trieflinger@de.bosch.com>

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -42,6 +42,11 @@
   height: 50px;
 }
 
+.acknowledgements-logo {
+  width: auto;
+  height: 200px;
+}
+
 .event-title {
   font-size: x-large;
   font-weight: bold;
