feat: add service api documentation
Signed-off-by: Sebastian Becker <sebastian.becker@de.bosch.com>

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -80,3 +80,7 @@
 .announcement-bar a:where(:focus, :hover) {
   color: var(--md-typeset-a-color) !important;
 }
+
+.swagger-ui .info {
+  margin: 0 0;
+}
