--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,8 +1,8 @@
 /*
- * Copyright (c) 2021 - for information on the respective copyright owner
+ * Copyright (c) 2021-2025 - for information on the respective copyright owner
  * see the NOTICE file and/or the repository https://github.com/carbynestack/carbynestack.github.io.
  *
- * SPDX-License-Identifier: Apache-2.0
+ * SPDX-License-Identifier: CC-BY-4.0
  */
 :root {
   --nav-item-color: #4d4d4d;
